// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Solver Processing AAL Test.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1,
    "id": "r~UWfVVJ52Nf6dd16uHjf0qA==",
    "overclockFactor": 8,
    "overclockName": "Laser OC x3",
    "powerFactor": 12.11525,
    "recipesPerMinute": 9.6,
  },
  {
    "crafterCount": 1,
    "id": "r~yN311ZzWOtGIrnebDveuZA==",
    "overclockFactor": 8,
    "overclockName": "Laser OC x3",
    "powerFactor": 12.11525,
    "recipesPerMinute": 9.6,
  },
  {
    "crafterCount": 1,
    "id": "r~yN311ZzWOtGIrnebDveuZA==",
    "overclockFactor": 1024,
    "overclockName": "OC x5, Laser OC x5",
    "powerFactor": 2771.9692,
    "recipesPerMinute": 1228.8,
  },
  {
    "crafterCount": 1,
    "id": "r~RXqVwIiSOjKwADvPKHES6g==",
    "overclockFactor": 2000,
    "overclockName": "OC x5, Laser OC x5",
    "powerFactor": 1419.2482304,
    "recipesPerMinute": 1200,
  },
]
`;

exports[`Solver Processing Bacterial VAT.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.5,
    "id": "r~MmaWKPixPHG2DhylGKJfcw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1,
  },
  {
    "crafterCount": 0.53943218,
    "id": "r~Jsd1qBwqPkqIEuuDH9X1Qg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.53943218,
  },
  {
    "crafterCount": 0.2631440583333333,
    "id": "r~gMH6rgx1NUeH8fjDpMvozg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.57886435,
  },
  {
    "crafterCount": 0.47318613,
    "id": "r~KMcT4ljLN7yKJgQKWf2bTg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.15772871,
  },
]
`;

exports[`Solver Processing CBD.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 20.833333333333332,
    "id": "r~DStdDbtsP5eiwVd7nAz-5g==",
    "overclockFactor": 4,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 500,
  },
  {
    "crafterCount": 2.666666666666667,
    "id": "r~zhSZFh9ePli1CBf9Rk33Ww==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 100,
  },
  {
    "crafterCount": 0.25,
    "id": "r~cf-_qtXOPKGPUfgN-cWUMg==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 30,
  },
  {
    "crafterCount": 0.5555555555,
    "id": "r~l2FjDHxgN6eFY5Nh5GDsjQ==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 33.33333333,
  },
  {
    "crafterCount": 0.26666666666666666,
    "id": "r~6d6Jz4MeNgKuIQ3jz7ZtRw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 20,
  },
  {
    "crafterCount": 1.2000000000000002,
    "id": "r~RGBQX9sdOHClgw6dB72FUQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 12,
  },
  {
    "crafterCount": 0.7249999998,
    "id": "r~-meWwGJJNq-R2BNAP5GT0Q==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 12.08333333,
  },
  {
    "crafterCount": 0.48,
    "id": "r~-5WYqt_OOQOL1KobhH2Etg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.2,
  },
  {
    "crafterCount": 0.64,
    "id": "r~_S_QGJNlMVuNJgE-nZGArg==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 9.6,
  },
  {
    "crafterCount": 0.16,
    "id": "r~kbREhVx_Pcm2pvmM0J_uZw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.2,
  },
  {
    "crafterCount": 0.03,
    "id": "r~wkTeJcA-NqmoPtJB9QOLkw==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 1.2,
  },
  {
    "crafterCount": 0.028888888166666668,
    "id": "r~Ak_OcW52MnmRZCxuHuMl4w==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.13333333,
  },
  {
    "crafterCount": 7.000000000000001,
    "id": "r~Vo5NG-W1M1qWhHFbnPFotw==",
    "overclockFactor": 4,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 16.8,
  },
  {
    "crafterCount": 0.6272,
    "id": "r~Pp7iDy-XNLegdUTznfsy9g==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.68,
  },
  {
    "crafterCount": 0.8205128199999999,
    "id": "r~5CozmSF-OgOeq8r9xLa3Tg==",
    "overclockFactor": 4,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 2.46153846,
  },
  {
    "crafterCount": 0.096153846171875,
    "id": "r~Ypoytta6PUeIoQetrBcqEQ==",
    "overclockFactor": 32,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 12.30769231,
  },
]
`;

exports[`Solver Processing CoAL.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1,
    "id": "r~vtAga4EYMHeNuvLms_Addw==",
    "overclockFactor": 16,
    "overclockName": "OC x4",
    "powerFactor": 16,
    "recipesPerMinute": 0.4,
  },
  {
    "crafterCount": 1,
    "id": "r~EJ-509OZNnyv8TjMTmVqLA==",
    "overclockFactor": 128,
    "overclockName": "OC x6",
    "powerFactor": 32,
    "recipesPerMinute": 3.2,
  },
  {
    "crafterCount": 1.0000000000012206,
    "id": "r~B7HNN4BIOUKRk4bQzDhHXw==",
    "overclockFactor": 65536,
    "overclockName": "OC x10",
    "powerFactor": 16,
    "recipesPerMinute": 2730.66666667,
  },
]
`;

exports[`Solver Processing DEFC.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1.00000000125,
    "id": "r~6dpibzBzMyuP0RKd0xgHdA==",
    "overclockFactor": 8,
    "overclockName": "Perfect OC x1, OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 2.66666667,
  },
  {
    "crafterCount": 0.9999999999999998,
    "id": "r~UiEe_M5KPsivzV1CV6DU7A==",
    "overclockFactor": 133.33333333333334,
    "overclockName": "Perfect OC x3, OC x1",
    "powerFactor": 1.92,
    "recipesPerMinute": 200,
  },
  {
    "crafterCount": 0.9999999999999998,
    "id": "r~JMWTxsEINfKXfcUcXWs7nA==",
    "overclockFactor": 66.66666666666667,
    "overclockName": "Perfect OC x3 (capped)",
    "powerFactor": 0.96,
    "recipesPerMinute": 400,
  },
]
`;

exports[`Solver Processing DTPF Convergence Catalyst Test.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1.000000000275,
    "id": "r~PXvO6_fCO7uQE421Cqqr-A==",
    "overclockFactor": 16.129032258064516,
    "overclockName": "OC x4",
    "powerFactor": 15.872,
    "recipesPerMinute": 12.90322581,
  },
  {
    "crafterCount": 0.002635462785947712,
    "id": "r~-7U0f46CO-ulE9EVR5E1rA==",
    "overclockFactor": 204,
    "overclockName": "Can't overclock",
    "powerFactor": 10,
    "recipesPerMinute": 6.4516129,
  },
  {
    "crafterCount": 1.000000000275,
    "id": "r~PXvO6_fCO7uQE421Cqqr-A==",
    "overclockFactor": 16.129032258064516,
    "overclockName": "Perfect OC x2",
    "powerFactor": 0.496,
    "recipesPerMinute": 12.90322581,
  },
  {
    "crafterCount": 0.05547653724673203,
    "id": "r~-7U0f46CO-ulE9EVR5E1rA==",
    "overclockFactor": 204,
    "overclockName": "Can't overclock",
    "powerFactor": 10,
    "recipesPerMinute": 135.80656318,
  },
]
`;

exports[`Solver Processing DTPF Convergence Test.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1,
    "id": "r~RG2BosO7PuSrOWlTPoRkvg==",
    "overclockFactor": 71.25,
    "overclockName": "Perfect OC x3",
    "powerFactor": 0.44912280701754387,
    "recipesPerMinute": 150,
  },
  {
    "crafterCount": 1,
    "id": "r~RG2BosO7PuSrOWlTPoRkvg==",
    "overclockFactor": 71.25,
    "overclockName": "OC x6",
    "powerFactor": 57.487719298245615,
    "recipesPerMinute": 150,
  },
  {
    "crafterCount": 1,
    "id": "r~RG2BosO7PuSrOWlTPoRkvg==",
    "overclockFactor": 71.25,
    "overclockName": "OC x6",
    "powerFactor": 57.487719298245615,
    "recipesPerMinute": 150,
  },
  {
    "crafterCount": 1,
    "id": "r~wNYM12NpOKOirsoiRpH7Qw==",
    "overclockFactor": 300,
    "overclockName": "Perfect OC x4",
    "powerFactor": 0.4266666666666667,
    "recipesPerMinute": 240,
  },
  {
    "crafterCount": 1.000000000275,
    "id": "r~wNYM12NpOKOirsoiRpH7Qw==",
    "overclockFactor": 16.129032258064516,
    "overclockName": "OC x4",
    "powerFactor": 15.872,
    "recipesPerMinute": 12.90322581,
  },
  {
    "crafterCount": 1,
    "id": "r~2qAAgMvVN1-Z5bTHtUbBWA==",
    "overclockFactor": 400,
    "overclockName": "Perfect OC x4",
    "powerFactor": 0.32,
    "recipesPerMinute": 1200,
  },
  {
    "crafterCount": 1,
    "id": "r~2qAAgMvVN1-Z5bTHtUbBWA==",
    "overclockFactor": 400,
    "overclockName": "Perfect OC x4",
    "powerFactor": 0.32,
    "recipesPerMinute": 1200,
  },
]
`;

exports[`Solver Processing EG+CBD.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.8,
    "id": "r~uQV72BLKO9qbDRZhuMXzCg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 30,
  },
  {
    "crafterCount": 0.03125,
    "id": "r~9rGvUYyFOUGDcGRqGaaHig==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 3.75,
  },
  {
    "crafterCount": 0.009375,
    "id": "r~dEl9scyrND2k_RSsUQYibQ==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 1.125,
  },
  {
    "crafterCount": 0.010416666666666666,
    "id": "r~pvEmmC8zOeeTaStnzuNc-Q==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 1.25,
  },
  {
    "crafterCount": 0.003125,
    "id": "r~uUTP7HjjMTiWd52sV3WnWg==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 0.375,
  },
  {
    "crafterCount": 0.07875,
    "id": "r~wkTeJcA-NqmoPtJB9QOLkw==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 3.15,
  },
  {
    "crafterCount": 0.013274999999999997,
    "id": "r~Ey4AokADNpCs3RPpJT1LNQ==",
    "overclockFactor": 16.666666666666668,
    "overclockName": "Perfect OC x2",
    "powerFactor": 0.96,
    "recipesPerMinute": 2.655,
  },
  {
    "crafterCount": 0.234375,
    "id": "r~le5F4V7IPWOxtOA_aooz0g==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 2.8125,
  },
  {
    "crafterCount": 0.0625,
    "id": "r~f70N1-LkO0KJyA7yrTZ7ag==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.75,
  },
  {
    "crafterCount": 0.015625,
    "id": "r~h6Bxj6yeNxWRw8a5FAUyKA==",
    "overclockFactor": 5,
    "overclockName": "Perfect OC x1",
    "powerFactor": 0.8,
    "recipesPerMinute": 6.25,
  },
  {
    "crafterCount": 0.18000000000000002,
    "id": "r~RGBQX9sdOHClgw6dB72FUQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.8,
  },
  {
    "crafterCount": 0.9375,
    "id": "r~-MMjPqvaM_aJNwSYxddjQg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 2.8125,
  },
  {
    "crafterCount": 0.01625,
    "id": "r~7mAJJ07tMQqjSU3dY1cKIw==",
    "overclockFactor": 20,
    "overclockName": "Perfect OC x2",
    "powerFactor": 0.8,
    "recipesPerMinute": 6.5,
  },
  {
    "crafterCount": 0.006,
    "id": "r~qbmu-PuSOumwXRGxHJSv1Q==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 0.18,
  },
  {
    "crafterCount": 0.018,
    "id": "r~MzS3q8iUMdiaypgter36-w==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 0.18,
  },
  {
    "crafterCount": 0.0703125,
    "id": "r~zp2-dVK8PsWq_OKHwt7vBQ==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 2.8125,
  },
  {
    "crafterCount": 0.6,
    "id": "r~1s-GG8HfOtmyR5CIZnBALg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.8,
  },
  {
    "crafterCount": 0.384,
    "id": "r~_S_QGJNlMVuNJgE-nZGArg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.44,
  },
  {
    "crafterCount": 0.61875,
    "id": "r~rJ0qFL1MOkKn30ugOTXY-g==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.9,
    "recipesPerMinute": 12.375,
  },
  {
    "crafterCount": 0.7425,
    "id": "r~PQvgLKUWOLGxZ-qu1VUREg==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 14.85,
  },
  {
    "crafterCount": 1.4833333333333334,
    "id": "r~NmdZbNwsOnC81x2YKCurvg==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 222.5,
  },
  {
    "crafterCount": 0.6675,
    "id": "r~KmkIBJ0bNSyDmt4NNHr52g==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 1.78,
  },
  {
    "crafterCount": 0.8425,
    "id": "r~8H_OPuR5OYGeAD6mduoERw==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 84.25,
  },
  {
    "crafterCount": 0.693,
    "id": "r~T-mpF0VyMRG53A4IYEjaag==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 10.395,
  },
  {
    "crafterCount": 0.5933333333333333,
    "id": "r~FmdZ0cQdOrq72CEoFyKxXw==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 7.12,
  },
]
`;

exports[`Solver Processing Endstone Dust.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 12,
    "id": "r~erPXJVP9NLKA0yVSdrCsYA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.25,
  },
  {
    "crafterCount": 0.0375,
    "id": "r~b-AuYUZjMr2Lktz1Dzo-yQ==",
    "overclockFactor": 5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 45,
  },
  {
    "crafterCount": 1.5,
    "id": "r~-kCyP2WAPZa7BBXVFXflKQ==",
    "overclockFactor": 10,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 45,
  },
]
`;

exports[`Solver Processing Epoxid.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.1,
    "id": "r~GGFsnPVuObGs6ap0fkUTWQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.25,
  },
  {
    "crafterCount": 0.26666666666666666,
    "id": "r~NbXvUN_1OyWfHknGb2lCow==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.5,
  },
  {
    "crafterCount": 0.23333333333333334,
    "id": "r~npQElb2vPQCMKB-u-oiOJg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.25,
  },
  {
    "crafterCount": 1.05,
    "id": "r~1grR9LTlPnCnF96dS-LcXQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.75,
  },
  {
    "crafterCount": 0.75,
    "id": "r~tETtUrBcMt-zVtZkSuU4pg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.25,
  },
  {
    "crafterCount": 0.0625,
    "id": "r~xDD_lTDhMdaw1icPRS82VQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.75,
  },
  {
    "crafterCount": 0.25,
    "id": "r~hySq2aL9P_ue7fFGZmO2BQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.25,
  },
  {
    "crafterCount": 0.3125,
    "id": "r~J3h1EXkHOyW5tuYYMC1b1Q==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.5625,
  },
]
`;

exports[`Solver Processing Fusion Compact.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1,
    "id": "r~F6QidLWMO_CMaXkzw9l9ew==",
    "overclockFactor": 512,
    "overclockName": "Perfect OC x1 (capped)",
    "powerFactor": 1,
    "recipesPerMinute": 1280,
  },
  {
    "crafterCount": 1,
    "id": "r~Ddxccy1nNXKyF69zWmk7DQ==",
    "overclockFactor": 64,
    "overclockName": "Can't overclock",
    "powerFactor": 1,
    "recipesPerMinute": 128,
  },
]
`;

exports[`Solver Processing Fusion test.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.11979166666666667,
    "id": "r~DP9KmpbrNhK_f7XN8kGPuQ==",
    "overclockFactor": 64,
    "overclockName": "Perfect OC x3 (capped)",
    "powerFactor": 1,
    "recipesPerMinute": 575,
  },
  {
    "crafterCount": 1,
    "id": "r~DP9KmpbrNhK_f7XN8kGPuQ==",
    "overclockFactor": 1,
    "overclockName": "Can't overclock",
    "powerFactor": 1,
    "recipesPerMinute": 75,
  },
  {
    "crafterCount": 1,
    "id": "r~DP9KmpbrNhK_f7XN8kGPuQ==",
    "overclockFactor": 2,
    "overclockName": "2/2 OC x1 (capped)",
    "powerFactor": 1,
    "recipesPerMinute": 150,
  },
]
`;

exports[`Solver Processing HOG 2.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.9600000000000001,
    "id": "r~zhSZFh9ePli1CBf9Rk33Ww==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 18,
  },
  {
    "crafterCount": 0.0125,
    "id": "r~pvEmmC8zOeeTaStnzuNc-Q==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 1.5,
  },
  {
    "crafterCount": 0.011250000000000001,
    "id": "r~dEl9scyrND2k_RSsUQYibQ==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 1.35,
  },
  {
    "crafterCount": 0.005,
    "id": "r~9rGvUYyFOUGDcGRqGaaHig==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 0.6,
  },
  {
    "crafterCount": 0.005625000000000001,
    "id": "r~uUTP7HjjMTiWd52sV3WnWg==",
    "overclockFactor": 16,
    "overclockName": "Perfect OC x2",
    "powerFactor": 1,
    "recipesPerMinute": 0.675,
  },
  {
    "crafterCount": 0.031592666166666665,
    "id": "r~qaI7ykaVN0qOzhXAtwTylg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.9,
    "recipesPerMinute": 1.89555997,
  },
  {
    "crafterCount": 0.30022866616666666,
    "id": "r~hOTHXnOWPDeYpfzVxo4j7A==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.7,
    "recipesPerMinute": 18.01371997,
  },
  {
    "crafterCount": 0.9006859985000001,
    "id": "r~Q24XsgMgOuO4sK_JwIIk6g==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 18.01371997,
  },
  {
    "crafterCount": 0.2475,
    "id": "r~-meWwGJJNq-R2BNAP5GT0Q==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 4.125,
  },
  {
    "crafterCount": 0.018258575,
    "id": "r~I0NxXpHbPueywU8_KBIx5w==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 4.382058,
  },
  {
    "crafterCount": 0.0027293515166666666,
    "id": "r~tAYC8vdiNzODxjEXyYF-Vg==",
    "overclockFactor": 5,
    "overclockName": "Perfect OC x1",
    "powerFactor": 0.8,
    "recipesPerMinute": 1.63761091,
  },
  {
    "crafterCount": 0.03752858333333333,
    "id": "r~7HBeWx-JOzG2ML_dPrlJfQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.900686,
  },
  {
    "crafterCount": 0.017058446875,
    "id": "r~le5F4V7IPWOxtOA_aooz0g==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 0.81880545,
  },
  {
    "crafterCount": 0.08517149999999998,
    "id": "r~BhbqFVoMPA2LNqYCpXKHWg==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 1.022058,
  },
  {
    "crafterCount": 0.005404116,
    "id": "r~miseS507O3-dbVSJZMwoqA==",
    "overclockFactor": 4.166666666666667,
    "overclockName": "Perfect OC x1",
    "powerFactor": 0.96,
    "recipesPerMinute": 0.5404116,
  },
  {
    "crafterCount": 0.0682337875,
    "id": "r~EWWL78vuP1mYr5DPmex7hw==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 0.81880545,
  },
  {
    "crafterCount": 0.11,
    "id": "r~1s-GG8HfOtmyR5CIZnBALg==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 1.32,
  },
  {
    "crafterCount": 0.035,
    "id": "r~o0XD1yxzPqmrFWZH4RGS1Q==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.7,
    "recipesPerMinute": 2.1,
  },
  {
    "crafterCount": 0.15971481216666666,
    "id": "r~OeOnQU5UMRqesXevfKfIBw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.7,
    "recipesPerMinute": 9.58288873,
  },
  {
    "crafterCount": 0.018000000000000002,
    "id": "r~KrvZ0ALNNey6kJhRLOO_sA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.7,
    "recipesPerMinute": 1.08,
  },
  {
    "crafterCount": 0.126,
    "id": "r~gWdhuL1WP1SNR7aEHR4MXw==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 2.52,
  },
  {
    "crafterCount": 0.06480000000000001,
    "id": "r~pbCR9m3ePVuCHrx4rlFzCA==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 1.296,
  },
  {
    "crafterCount": 0.5749733235,
    "id": "r~ceCR-96IMrir98b_7KZH9A==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 11.49946647,
  },
  {
    "crafterCount": 0.09477799850000002,
    "id": "r~4c9tuSl_N46wT4ZGOOfQPw==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 1.89555997,
  },
  {
    "crafterCount": 0.14,
    "id": "r~dV7-hCYcObW5Ef1EpaQ8vQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 4.2,
  },
  {
    "crafterCount": 0.5560459990000001,
    "id": "r~xVl-3rClNb2H8wbuopXWIw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 5.56045999,
  },
  {
    "crafterCount": 0.21999999999999997,
    "id": "r~pn5djyOYPR2tjUBiczKRDA==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1",
    "powerFactor": 1,
    "recipesPerMinute": 3.3,
  },
  {
    "crafterCount": 0.13646757583333333,
    "id": "r~9rfnwtlWPsW6iEWKzNOgDQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.63761091,
  },
  {
    "crafterCount": 0.28649347413333337,
    "id": "r~1rOcFRhTP_KnH7hbNHyHwA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 2.68587632,
  },
]
`;

exports[`Solver Processing Hydrogen.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.036111111,
    "id": "r~vwGjeHKRMYafTU0rNvrgwQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.08333333,
  },
  {
    "crafterCount": 1.9499999985000003,
    "id": "r~eNy9mMjjM-WzQWAmhpEIUw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 4.33333333,
  },
  {
    "crafterCount": 0.036111111,
    "id": "r~TZUWVC7hPdex_jxmeb5XMA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.08333333,
  },
]
`;

exports[`Solver Processing Nano Forge.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1,
    "id": "r~rJ_Q9euXNNuH4fT-6M0thg==",
    "overclockFactor": 16,
    "overclockName": "OC x4",
    "powerFactor": 16,
    "recipesPerMinute": 1.92,
  },
  {
    "crafterCount": 1.0000000000250002,
    "id": "r~rJ_Q9euXNNuH4fT-6M0thg==",
    "overclockFactor": 256.4102564102564,
    "overclockName": "Perfect OC x4",
    "powerFactor": 0.9984,
    "recipesPerMinute": 30.76923077,
  },
  {
    "crafterCount": 1,
    "id": "r~7CNUEH4VN2qq2mZCQvktZg==",
    "overclockFactor": 8,
    "overclockName": "OC x3",
    "powerFactor": 8,
    "recipesPerMinute": 2.4,
  },
  {
    "crafterCount": 1,
    "id": "r~_TucNvjbPbKRfD4kzTpKPg==",
    "overclockFactor": 8,
    "overclockName": "OC x3",
    "powerFactor": 8,
    "recipesPerMinute": 0.48,
  },
  {
    "crafterCount": 1.0000000001125,
    "id": "r~_TucNvjbPbKRfD4kzTpKPg==",
    "overclockFactor": 64.05124099279423,
    "overclockName": "Perfect OC x2",
    "powerFactor": 0.9992000000000001,
    "recipesPerMinute": 3.84307446,
  },
  {
    "crafterCount": 1.0000000000166667,
    "id": "r~7CNUEH4VN2qq2mZCQvktZg==",
    "overclockFactor": 64.51612903225806,
    "overclockName": "Perfect OC x3",
    "powerFactor": 0.992,
    "recipesPerMinute": 19.35483871,
  },
]
`;

exports[`Solver Processing Naqfuel.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1,
    "id": "r~C9WbwWoXMjSerM8cibAyAA==",
    "overclockFactor": 1,
    "overclockName": "Can't overclock",
    "powerFactor": 1,
    "recipesPerMinute": 600,
  },
  {
    "crafterCount": 1,
    "id": "r~AtFem9qVPea3V_6oxSZfOQ==",
    "overclockFactor": 6,
    "overclockName": "Can't overclock",
    "powerFactor": 1,
    "recipesPerMinute": 30,
  },
  {
    "crafterCount": 1,
    "id": "r~AtFem9qVPea3V_6oxSZfOQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 5,
  },
  {
    "crafterCount": 1,
    "id": "r~AtFem9qVPea3V_6oxSZfOQ==",
    "overclockFactor": 6,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 30,
  },
]
`;

exports[`Solver Processing Nitrobenzene.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 2.1,
    "id": "r~oHhcLWHZPv6s0DtgK38jiw==",
    "overclockFactor": 0.5,
    "overclockName": "",
    "powerFactor": 2,
    "recipesPerMinute": 2.1,
  },
  {
    "crafterCount": 1.53125,
    "id": "r~DaiSHwngPtunSBzqDQfuvA==",
    "overclockFactor": 4.285714285714286,
    "overclockName": "OC x2",
    "powerFactor": 3.7333333333333334,
    "recipesPerMinute": 262.5,
  },
  {
    "crafterCount": 0.875,
    "id": "r~dY9AJxYdM1yU-sjjytgvQg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 26.25,
  },
  {
    "crafterCount": 0.56,
    "id": "r~wsro2Fn0NA2OT-iCHWZ1rw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 21,
  },
  {
    "crafterCount": 0.050555554833333335,
    "id": "r~Ak_OcW52MnmRZCxuHuMl4w==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.23333333,
  },
  {
    "crafterCount": 2.8,
    "id": "r~_S_QGJNlMVuNJgE-nZGArg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 10.5,
  },
  {
    "crafterCount": 0.25265624999999997,
    "id": "r~eAFVb_KMPd6jU1omySQ9Zg==",
    "overclockFactor": 5.6103896103896105,
    "overclockName": "",
    "powerFactor": 0.3208333333333333,
    "recipesPerMinute": 3.9375,
  },
]
`;

exports[`Solver Processing Oxygen.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.32,
    "id": "r~Zx5M8dmoMYOCvjAvTfJKmw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 9.6,
  },
  {
    "crafterCount": 0.39999999999999997,
    "id": "r~KNFUVhzfOwq6mFtHoi7cjg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 4.8,
  },
  {
    "crafterCount": 0.96,
    "id": "r~YaW3X6b4O_SwqcLuUmt0bQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 14.4,
  },
  {
    "crafterCount": 0.24,
    "id": "r~qb2P1J_2PJaw3Ho18q4cig==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 14.4,
  },
  {
    "crafterCount": 0.12,
    "id": "r~vCIgnPLvPtaAXOM9ybTb2Q==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 7.2,
  },
  {
    "crafterCount": 0.12,
    "id": "r~nhMX_iitMiiwky68o_o5Ag==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 7.2,
  },
  {
    "crafterCount": 0.15,
    "id": "r~6eEcuvgcMBKLvjzLUWv6dQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 7.2,
  },
]
`;

exports[`Solver Processing PCB test.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 93.75000000000001,
    "id": "r~3SKHWZ2eOC25FzCsEvSmUA==",
    "overclockFactor": 4.022222222222222,
    "overclockName": "Can't overclock",
    "powerFactor": 0.24861878453038674,
    "recipesPerMinute": 1250,
  },
  {
    "crafterCount": 0.36168981482421875,
    "id": "r~oW7Dz6k_MM6mgTRc0NBX8g==",
    "overclockFactor": 128.85333333333332,
    "overclockName": "Perfect OC x2",
    "powerFactor": 5.61939163856859,
    "recipesPerMinute": 185.18518519,
  },
]
`;

exports[`Solver Processing Platline.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.33452380751666666,
    "id": "r~LynJPjiqMsiUBCSoN2J2GA==",
    "overclockFactor": 4.00355871886121,
    "overclockName": "Perfect OC x1",
    "powerFactor": 0.9991111111111112,
    "recipesPerMinute": 0.71428571,
  },
  {
    "crafterCount": 0.208333335,
    "id": "r~Nl4XZN9dMfWJG1fm81lzYg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.35714286,
  },
  {
    "crafterCount": 1.4285714275,
    "id": "r~yNGXyzctMyOA2P1elXuagQ==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 5.71428571,
  },
  {
    "crafterCount": 0.904761905,
    "id": "r~vuu2rZ82Prq38HjtC49TzQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.95,
    "recipesPerMinute": 5.42857143,
  },
  {
    "crafterCount": 0.004464285750000001,
    "id": "r~tr4LppjYNN2G1Hml9L6aFQ==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 0.35714286,
  },
  {
    "crafterCount": 0.00803571435,
    "id": "r~0OGphknuNJOqPi_j63HBvw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.35714286,
  },
  {
    "crafterCount": 0.08035714275,
    "id": "r~ONmYeQdgOqy64CAeHS-Adg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 3.21428571,
  },
  {
    "crafterCount": 0.4285714293333333,
    "id": "r~0LjH8tPBMXy_rPTPxOyRrg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.60714286,
  },
  {
    "crafterCount": 0.0015249595,
    "id": "r~IefPsWrON5e0h8fAlVuebQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.03049919,
  },
  {
    "crafterCount": 3.67346939,
    "id": "r~pMPqnAZcOvezrSqqqsOA9A==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 7.34693878,
  },
  {
    "crafterCount": 0.86096938125,
    "id": "r~cM4gFPskOIezTTJYHti9cQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.45918367,
  },
  {
    "crafterCount": 0.04783163333333333,
    "id": "r~zGXNxD7bMRiXezvT9TPv2w==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.22959184,
  },
  {
    "crafterCount": 0.5931122458333333,
    "id": "r~4t1Pi95eM9qhOzz6oYfUeg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 2.84693878,
  },
  {
    "crafterCount": 0.8592,
    "id": "r~zitUERrJPTmV5Uq_mIKFTw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 3.222,
  },
  {
    "crafterCount": 0.2881402595,
    "id": "r~8FjJKRihO0ud-q63kwD3Gg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 5.76280519,
  },
  {
    "crafterCount": 0.041142856,
    "id": "r~isenCJT_MtGn3kvH1Q4mxw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.15428571,
  },
  {
    "crafterCount": 1.1015384666666665,
    "id": "r~5CozmSF-OgOeq8r9xLa3Tg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.82615385,
  },
  {
    "crafterCount": 0.1290865384375,
    "id": "r~Ypoytta6PUeIoQetrBcqEQ==",
    "overclockFactor": 8,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 4.13076923,
  },
  {
    "crafterCount": 12.728766233333333,
    "id": "r~y_1VfXznPde_m6qsPvzi6A==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 7.63725974,
  },
  {
    "crafterCount": 0.11904761833333333,
    "id": "r~2imLgzdaOZSo8pXaO3VPjw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.95,
    "recipesPerMinute": 0.71428571,
  },
  {
    "crafterCount": 0.04633766133333333,
    "id": "r~TF7XJPZLMt6y_n9Jg73Gwg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.17376623,
  },
  {
    "crafterCount": 0.00649351,
    "id": "r~h2wj8vOeMzKwgVxc2xlD6g==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.00649351,
  },
  {
    "crafterCount": 0.064285715,
    "id": "r~52dieUdiOAGg-MCRM3U9gg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.25714286,
  },
  {
    "crafterCount": 0.064285715,
    "id": "r~vbNn53tuN1eOLJD9ft4XqA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.95,
    "recipesPerMinute": 0.25714286,
  },
  {
    "crafterCount": 0.019285714250000002,
    "id": "r~XqzPt-xZMi-sQk862hF4xQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.77142857,
  },
  {
    "crafterCount": 0.0385714275,
    "id": "r~H_pzwkgZNouYwV0fPVH3Pw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.15428571,
  },
  {
    "crafterCount": 0.077142855,
    "id": "r~X3cIaj5jNsWTAnasnHmrCA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.15428571,
  },
  {
    "crafterCount": 0.0366428575,
    "id": "r~jru56OjSMROEOWF0qVdr_w==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.14657143,
  },
  {
    "crafterCount": 0.0366428575,
    "id": "r~5_rcj8wYObmgOpZnuOfuEA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.14657143,
  },
  {
    "crafterCount": 0.0366428575,
    "id": "r~G-_eHXqzO0GD45ssKkYACQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.14657143,
  },
  {
    "crafterCount": 0.0010285714,
    "id": "r~kcqJ4g98OfeVQitXw1cchg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.15428571,
  },
  {
    "crafterCount": 0.4464285725,
    "id": "r~0-j1XaUnP8W8YE2MLAoSOQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.78571429,
  },
  {
    "crafterCount": 0.0056818181,
    "id": "r~0E39gtWlOCG9LMrRE4J5dA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.16233766,
  },
  {
    "crafterCount": 0.008658008533333334,
    "id": "r~LSn4fyAaNK6jkJJlUSSe0A==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.32467532,
  },
  {
    "crafterCount": 0.0211038958,
    "id": "r~wK3cZxmGPCi3SlC7m425rw==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 0.32467532,
  },
  {
    "crafterCount": 0.005571428633333333,
    "id": "r~Ic3yTLIFO-qqZ6NeNvjikA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.25714286,
  },
  {
    "crafterCount": 0.012337661666666666,
    "id": "r~CssUsJRmNbuzDNguZebxUg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.95,
    "recipesPerMinute": 0.07402597,
  },
  {
    "crafterCount": 0.006168830833333333,
    "id": "r~DDnMMSc1MwSd5dWPtL7NnQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.07402597,
  },
  {
    "crafterCount": 0.0092532475,
    "id": "r~_ksvJY-rPUSz0fjEKZ2CFQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.03701299,
  },
  {
    "crafterCount": 0.08327922,
    "id": "r~JR-hI5SMNLOyskxiHBPilQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.33311688,
  },
  {
    "crafterCount": 0.0925324625,
    "id": "r~kvIiXeauM4SCV4XhubeWUA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.07402597,
  },
  {
    "crafterCount": 0,
    "id": "r~zpFWzzlXOzWpvhW5me3qFg==",
    "overclockFactor": 1,
    "overclockName": undefined,
    "powerFactor": 1,
    "recipesPerMinute": 0.53298701,
  },
  {
    "crafterCount": 0.1332467525,
    "id": "r~KzuQtPiiOLml2uiPpl58HA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.53298701,
  },
  {
    "crafterCount": 0.018506493333333332,
    "id": "r~69nvUSG0NVGpsijx3Edzdg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.95,
    "recipesPerMinute": 0.22207792,
  },
  {
    "crafterCount": 0.02775974,
    "id": "r~apzRTCp_PUit0Hg5Lgl9Hg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.22207792,
  },
  {
    "crafterCount": 0.0055519475,
    "id": "r~Himt8YD6PZud6pX1X-Stmg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.02220779,
  },
  {
    "crafterCount": 0.037012986666666664,
    "id": "r~vW4NWbhyOFSLqSe1bw0zNw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 0.95,
    "recipesPerMinute": 0.22207792,
  },
  {
    "crafterCount": 0.05551948,
    "id": "r~iT2RlgDsNNGB6OyF6fGI2A==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.22207792,
  },
  {
    "crafterCount": 0.05551948,
    "id": "r~-mIZykKDPHWxSi2ju40Bjg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.22207792,
  },
  {
    "crafterCount": 0.05551948,
    "id": "r~SPTaZ50AO8WaOYE2EotNQA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.22207792,
  },
  {
    "crafterCount": 0.0199870131,
    "id": "r~iL4olhulOFu_xxuJlz1ctg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.66623377,
  },
  {
    "crafterCount": 0.0049967532,
    "id": "r~0OGphknuNJOqPi_j63HBvw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.22207792,
  },
  {
    "crafterCount": 0.0027759740000000005,
    "id": "r~VDPcXyUwPke5sPWdfA0XZg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.11103896,
  },
  {
    "crafterCount": 0.00166558425,
    "id": "r~gX9W-nqeMweZQaTQtt6LJA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.04441558,
  },
  {
    "crafterCount": 0.005739795875,
    "id": "r~ZFswn57wMEm6i7rJwzoaUw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.45918367,
  },
  {
    "crafterCount": 0.011479591875,
    "id": "r~rubYs3BnNo-BpmK8siw1Rw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.91836735,
  },
  {
    "crafterCount": 0.01147959175,
    "id": "r~OAZ6jQGPNO-7pNyNKDjNXQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.45918367,
  },
  {
    "crafterCount": 0.153061225,
    "id": "r~Up7mwrByN-mANETOLOjf4g==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.91836735,
  },
  {
    "crafterCount": 0.30612244666666666,
    "id": "r~WwpXPkVMMnyh5Uut9X6M7Q==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.45918367,
  },
]
`;

exports[`Solver Processing Polyphenylene.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.2,
    "id": "r~gnFsu0AtO2a8cVM1dXFMRw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1,
  },
  {
    "crafterCount": 0.2,
    "id": "r~p7IvAziPMdqruAPnUfkrRg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1,
  },
  {
    "crafterCount": 0.05,
    "id": "r~K_D7nOQ-OjSjgdGcimEJyQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1,
  },
  {
    "crafterCount": 0.5333333333333333,
    "id": "r~TF7XJPZLMt6y_n9Jg73Gwg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 2,
  },
  {
    "crafterCount": 1.2,
    "id": "r~6ssKZDNqN4GCHgRZ9lem9w==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 2,
  },
]
`;

exports[`Solver Processing QFT.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1,
    "id": "r~VxRte9DANy-Bha2qusaLUQ==",
    "overclockFactor": 64,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 192,
  },
  {
    "crafterCount": 1,
    "id": "r~QV3Yc2vgN0eJu_LjC9QG6g==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 3,
  },
  {
    "crafterCount": 1,
    "id": "r~OuVGFxaDNBSFyLid1b3k3w==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 3,
  },
]
`;

exports[`Solver Processing Space Assembler.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1,
    "id": "r~_OfRiEPMPYma6yzVAjPajQ==",
    "overclockFactor": 4,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 12,
  },
  {
    "crafterCount": 1,
    "id": "r~_OfRiEPMPYma6yzVAjPajQ==",
    "overclockFactor": 64,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 192,
  },
  {
    "crafterCount": 1,
    "id": "r~xA6YuAZVPaGujqwTSBbBsA==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 3,
  },
  {
    "crafterCount": 1,
    "id": "r~Z8sp-Sc0O5uJTFpcwDCtkg==",
    "overclockFactor": 16,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 48,
  },
  {
    "crafterCount": 1,
    "id": "r~Z8sp-Sc0O5uJTFpcwDCtkg==",
    "overclockFactor": 256,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 768,
  },
]
`;

exports[`Solver Processing Test ore proc.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 6.666666666666666,
    "id": "r~LthoxI6UPgCI9auvW06xrg==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 10,
  },
  {
    "crafterCount": 3.333333333333333,
    "id": "r~_bO9DbTuMAmxaRxSblCKig==",
    "overclockFactor": 4,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 20,
  },
  {
    "crafterCount": 13.333333333333332,
    "id": "r~ZAR3A8_cNweQ9WCobx2q4w==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 20,
  },
  {
    "crafterCount": 0.17500000000000002,
    "id": "r~cFUBZ7exNA6KcgC6Au2bDg==",
    "overclockFactor": 48,
    "overclockName": "OC x2",
    "powerFactor": 0.9333333333333332,
    "recipesPerMinute": 20,
  },
  {
    "crafterCount": 3.333333333333333,
    "id": "r~vKYuIkbWNSK0Am1OcMaJQg==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 5,
  },
  {
    "crafterCount": 5.208333333333334,
    "id": "r~Eeoe8eYyOHqLVD26Sa1SmQ==",
    "overclockFactor": 4,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 50,
  },
  {
    "crafterCount": 33.33333333333333,
    "id": "r~eQD5ayWzPU-Wp3zHW7hxRQ==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 50,
  },
  {
    "crafterCount": 0.5833333333333334,
    "id": "r~GX27UMD2MTeUfu56vLZeWg==",
    "overclockFactor": 48.57142857142857,
    "overclockName": "OC x2",
    "powerFactor": 0.9223529411764705,
    "recipesPerMinute": 50,
  },
  {
    "crafterCount": 6.666666666666666,
    "id": "r~sKTuaIxWNuSk_ZdwwDnMhQ==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 10,
  },
  {
    "crafterCount": 4.166666666666667,
    "id": "r~S8-5qQEuP7iksdVDWjpXuQ==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 4,
    "recipesPerMinute": 20,
  },
  {
    "crafterCount": 13.333333333333332,
    "id": "r~qzk6uMquP2WhAQsZPG7R2Q==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 20,
  },
  {
    "crafterCount": 0.5,
    "id": "r~r4dlDN1zNl6sVqaJV4Z6CQ==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1 (capped)",
    "powerFactor": 0.9025,
    "recipesPerMinute": 20,
  },
  {
    "crafterCount": 0.5,
    "id": "r~cfghbafANtC1ekHjRzMLxA==",
    "overclockFactor": 4,
    "overclockName": "Perfect OC x1 (capped)",
    "powerFactor": 0.9025,
    "recipesPerMinute": 10,
  },
  {
    "crafterCount": 3.333333333333333,
    "id": "r~8VXs_8X7OOuho_C5et4XBg==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 5,
  },
  {
    "crafterCount": 1.0416666666666667,
    "id": "r~l2eQKbtAMfak66VwtLwn8g==",
    "overclockFactor": 4,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 10,
  },
  {
    "crafterCount": 1.6666666666666665,
    "id": "r~39PKcRcFMge5yTyalFKmnQ==",
    "overclockFactor": 4,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 10,
  },
  {
    "crafterCount": 3.333333333333333,
    "id": "r~zxH4ywdANBKqVK5l8rM1bw==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 5,
  },
  {
    "crafterCount": 4.166666666666667,
    "id": "r~jsNqKgKpMGCC28tYcvLyjg==",
    "overclockFactor": 4,
    "overclockName": "OC x2",
    "powerFactor": 4,
    "recipesPerMinute": 40,
  },
  {
    "crafterCount": 26.666666666666664,
    "id": "r~aMhsOzEhMnK-Em3HqQCr5g==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 40,
  },
  {
    "crafterCount": 0.10833333333333331,
    "id": "r~jZLm8pQMOxK7yMuqoIkHtg==",
    "overclockFactor": 49.23076923076924,
    "overclockName": "OC x2",
    "powerFactor": 0.9099999999999998,
    "recipesPerMinute": 40,
  },
  {
    "crafterCount": 0.11666666666666665,
    "id": "r~NZrPmj5uOr6X9C5IhSL2Bw==",
    "overclockFactor": 2.857142857142857,
    "overclockName": "",
    "powerFactor": 0.315,
    "recipesPerMinute": 4,
  },
  {
    "crafterCount": 1.0666666666666667,
    "id": "r~lm_d8dlwORSy_JGlmk0SZg==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 20,
  },
  {
    "crafterCount": 0,
    "id": "r~g6unjiXGPMyLx_5z372PHw==",
    "overclockFactor": 1,
    "overclockName": undefined,
    "powerFactor": 1,
    "recipesPerMinute": 20,
  },
  {
    "crafterCount": 1.212500001,
    "id": "r~wjHhkfjTN5uBB-OT8VxWJw==",
    "overclockFactor": 24,
    "overclockName": "OC x1",
    "powerFactor": 0.4666666666666666,
    "recipesPerMinute": 4.04166667,
  },
  {
    "crafterCount": 0.017876602544444443,
    "id": "r~19QVE_8rOxywIEHunCL9Lg==",
    "overclockFactor": 16.956521739130437,
    "overclockName": "",
    "powerFactor": 0.31846153846153846,
    "recipesPerMinute": 1.39903846,
  },
  {
    "crafterCount": 0.007654671666666667,
    "id": "r~3ZDvQfKLOM-VXs03MkGWDg==",
    "overclockFactor": 11.2,
    "overclockName": "",
    "powerFactor": 0.32142857142857145,
    "recipesPerMinute": 0.36742424,
  },
  {
    "crafterCount": 1.2279369375,
    "id": "r~nCsplWJTPt-NsgTngfkNfQ==",
    "overclockFactor": 3,
    "overclockName": "",
    "powerFactor": 0.2333333333333333,
    "recipesPerMinute": 0.33680556,
  },
  {
    "crafterCount": 0.0026987625000000006,
    "id": "r~3wLpYq4GPuSuQ0VR5zugpg==",
    "overclockFactor": 16.848,
    "overclockName": "",
    "powerFactor": 0.32051282051282054,
    "recipesPerMinute": 0.07772436,
  },
  {
    "crafterCount": 0.0014969136000000003,
    "id": "r~C9yxeF7hOr6M9kdLq7caqQ==",
    "overclockFactor": 25.499999999999996,
    "overclockName": "",
    "powerFactor": 0.31764705882352945,
    "recipesPerMinute": 0.22453704,
  },
  {
    "crafterCount": 0.0010023975,
    "id": "r~jHk16yXhMaePaG-WugGJ1w==",
    "overclockFactor": 25.2,
    "overclockName": "",
    "powerFactor": 0.32142857142857145,
    "recipesPerMinute": 0.14434524,
  },
  {
    "crafterCount": 0.0808333328,
    "id": "r~xlp8A7X3OgK5-UKLy2W0pQ==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 2,
    "recipesPerMinute": 0.73484848,
  },
]
`;

exports[`Solver Processing Tungsten.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 7.32,
    "id": "r~qtcy8ZviMqaPYbIGos4F9w==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 16,
  },
  {
    "crafterCount": 26.666666666666668,
    "id": "r~rIoTKaPxP6mnlSIf647ZOA==",
    "overclockFactor": 2,
    "overclockName": "OC x1",
    "powerFactor": 1.9,
    "recipesPerMinute": 8,
  },
  {
    "crafterCount": 2.6666666666666665,
    "id": "r~yEe9piywPqqHB_38ezgiaQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 16,
  },
  {
    "crafterCount": 0.6666666666666666,
    "id": "r~jxcC0yyUPPOWkn42-7te4w==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 16,
  },
]
`;

exports[`Solver Processing UHV naqfuel mk3 chromatic glass.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.03333333333333333,
    "id": "r~QhS4wt8yPZKMmptzObghdg==",
    "overclockFactor": 3,
    "overclockName": "Can't overclock",
    "powerFactor": 1,
    "recipesPerMinute": 1.2,
  },
  {
    "crafterCount": 1.5426,
    "id": "r~ijHNmNlMNnWYUN95maIY5Q==",
    "overclockFactor": 35.00583430571762,
    "overclockName": "",
    "powerFactor": 0.22853333333333337,
    "recipesPerMinute": 10.8,
  },
  {
    "crafterCount": 92.16000000000001,
    "id": "r~zkQq1R-lP2GrcbCcrJ7hWQ==",
    "overclockFactor": 0.5,
    "overclockName": "Can't overclock",
    "powerFactor": 0,
    "recipesPerMinute": 691.2,
  },
  {
    "crafterCount": 0.002,
    "id": "r~JR19rEADNcaWj0lcKKv9KQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 2.4,
  },
  {
    "crafterCount": 0.01,
    "id": "r~0FNN_JKBPHGNHsLUmB45Gw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 12,
  },
  {
    "crafterCount": 0.001,
    "id": "r~z5a6-VooOteVR4Oj6wwTlQ==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1.2,
  },
  {
    "crafterCount": 0.005,
    "id": "r~GO7_KDOqPemW2w7ouD12hg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 6,
  },
  {
    "crafterCount": 0.3314285714285714,
    "id": "r~NhtaQxslPG2tGdadkgikKA==",
    "overclockFactor": 168.96551724137933,
    "overclockName": "OC x2",
    "powerFactor": 1.3257142857142856,
    "recipesPerMinute": 48,
  },
  {
    "crafterCount": 0.21428571428571427,
    "id": "r~S-R_2H6ANTCI4lSl9Yq_cQ==",
    "overclockFactor": 84,
    "overclockName": "OC x1",
    "powerFactor": 0.6666666666666666,
    "recipesPerMinute": 12,
  },
  {
    "crafterCount": 1.3599999999999999,
    "id": "r~ECtNdjKWNSOzBEumemkhBw==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 48,
  },
  {
    "crafterCount": 0.0625,
    "id": "r~ZXx8BsKdMI6paBkbIlO79A==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 3,
  },
  {
    "crafterCount": 0.9599999999999999,
    "id": "r~AOpvnEuBOZySKTAMP_X4qg==",
    "overclockFactor": 4.041666666666667,
    "overclockName": "OC x2",
    "powerFactor": 3.958762886597938,
    "recipesPerMinute": 24,
  },
  {
    "crafterCount": 0.64,
    "id": "r~mpOYUZvyOmmgoWz8VPDqmw==",
    "overclockFactor": 4.03125,
    "overclockName": "OC x2",
    "powerFactor": 3.9689922480620154,
    "recipesPerMinute": 12,
  },
  {
    "crafterCount": 0.72,
    "id": "r~3hB9NLQJOrunJOvXI7KujQ==",
    "overclockFactor": 8.083333333333334,
    "overclockName": "OC x3",
    "powerFactor": 7.917525773195876,
    "recipesPerMinute": 24,
  },
  {
    "crafterCount": 0.48000000000000004,
    "id": "r~kkvnKebyO6KaoKKY2GCHXA==",
    "overclockFactor": 8.0625,
    "overclockName": "OC x3",
    "powerFactor": 7.937984496124031,
    "recipesPerMinute": 12,
  },
  {
    "crafterCount": 0.38249999999999995,
    "id": "r~KcV7Okx_PX2io84jpBy7Qg==",
    "overclockFactor": 70.58823529411765,
    "overclockName": "Perfect OC x1",
    "powerFactor": 0.2999174913749999,
    "recipesPerMinute": 12,
  },
  {
    "crafterCount": 0.5674999999999999,
    "id": "r~cXEm-XdKOxyUAWAJTlI7zA==",
    "overclockFactor": 70.48458149779736,
    "overclockName": "Perfect OC x1",
    "powerFactor": 0.27107358822471084,
    "recipesPerMinute": 24,
  },
]
`;

exports[`Solver Processing UUM.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 334.1666666666667,
    "id": "r~ptA6HcXEOHe98CzXBlwiuA==",
    "overclockFactor": 2.002493765586035,
    "overclockName": "OC x1",
    "powerFactor": 15.980074719800747,
    "recipesPerMinute": 1000,
  },
]
`;

exports[`Solver Processing Vinyl chloride.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 0.26666666666666666,
    "id": "r~TF7XJPZLMt6y_n9Jg73Gwg==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 1,
  },
  {
    "crafterCount": 0.06666666666666667,
    "id": "r~viwsIBLDN2C-ugToY8J0Ig==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.5,
  },
  {
    "crafterCount": 0.06666666666666667,
    "id": "r~M65ngGgOMAuQJvwNKRMhig==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 0.5,
  },
  {
    "crafterCount": 0.9259259253333333,
    "id": "r~cWHUEfLTN2imO-TlDDgr2A==",
    "overclockFactor": 1,
    "overclockName": "",
    "powerFactor": 1,
    "recipesPerMinute": 6.94444444,
  },
]
`;

exports[`Solver Processing mebf.gtnh should process without errors 1`] = `
[
  {
    "crafterCount": 1,
    "id": "r~s6XwXJ10Nf6Rm_EayZQMUA==",
    "overclockFactor": 16384,
    "overclockName": "Perfect OC x1, OC x12",
    "powerFactor": 3696.64,
    "recipesPerMinute": 32768,
  },
]
`;
